--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    <img class="receba" src="D:\lihue_9wytf12\Área de Trabalho\JavaScript\Presente B\Assets\coisa mais horrivel ainda.jpg" alt="RECEBAAAAAAAAAAAAA">
-    <audio id="audiorecebaengrasado" src="D:\lihue_9wytf12\Área de Trabalho\JavaScript\Presente B\Assets\coisa horrivel.mp3"></audio>
+    <img class="receba" src="Presente B/Assets/coisa mais horrivel ainda.jpg" alt="RECEBAAAAAAAAAAAAA">
+    <audio id="audiorecebaengrasado" src="Presente B/Assets/coisa horrivel.mp3"></audio>
     <button onclick="playaudio()" type="button">clique e veja o que o bolsonaro tem a dizer...</button>
 
     <style>
